@startuml
skinparam defaultFontName Monospaced
skinparam defaultFontColor #d25b87
skinparam backgroundColor #fde8f1
skinparam Legend_BackgroundColor LavenderBlush
skinparam ClassHeaderBackgroundColor #c6cbec
skinparam EntityBackgroundColor #FDFDF1
left to right direction
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho


entity "drugs" as e01 {
+ id
--
name: string
maker_name: string
formulation: integer (enum)
text: text
division: integer (enum)
effect_text: string
usage: string
for_days: integer
caution: text
document_url: string
maker_url: string
texation: text
}

entity "ingredients" as e02 {
+ id
--
name: string
drive: integer (enum)
tobacco: integer (enum)
alcohol: integer (enum)
}

entity "drug_ingredients" as e08 {
+ id
--
# drug_id (FK1)
# ingredient_id (FK2)
}

entity "symptoms" as e03 {
+ id
--
name: string
}

entity "drug_symptoms" as e09 {
+ id
--
# drug_id (FK1)
# symptom_id (FK2)
}



entity "users" as e06 {
+ id
--
user: string
email: string
crypted_password: string
salt: string
}

entity "bookmarks" as e07 {
+ id
--
# user_id (FK1)
# drug_id (FK2)
}

entity "maker_names" as e04 {
+ id
--
# drug_id (FK1)
name: string
}

e01 ||--|{ e08
e02 ||--|{ e08
e01 ||--|{ e09
e03 ||--|{ e09
e06 ||--o{ e07
e07 }o--|| e01
e01 }|--|| e04



@enduml
